--- a/HTML5 CSS3/ex008/index.html
+++ b/HTML5 CSS3/ex008/index.html
@@ -9,5 +9,7 @@
     <h1>Links</h1>
     <h2>Usando links externos</h2>
     <p>Para acessar o site da <a href="https://www.google.com" target = "_blank">Google</a></p>
+    <h1>Links Internos</h1>
+    <p>Para acessar outra <a href="pg02.html"> pagina do site</a></p>
 </body>
 </html>
