--- a/HTML5 CSS3/ex008/index.html
+++ b/HTML5 CSS3/ex008/index.html
@@ -9,5 +9,8 @@
     <h1>Links</h1>
     <h2>Usando links externos</h2>
     <p>Para acessar o site da <a href="https://www.google.com" target = "_blank">Google</a></p>
+    <h2>Utilizando links internos</h2>
+    <p>para acessar a segunda pagina do site: <a href="pg2.html" rel = next>Pagina2</a></p>
+
 </body>
 </html>
