--- a/HTML5 CSS3/ex010/index.html
+++ b/HTML5 CSS3/ex010/index.html
@@ -14,5 +14,9 @@
         <source media="(max-width: 1050px)" srcset="imagens/Media.png">
         <img src="imagens/Grande.png" alt="Imagem grande">
     </picture>
+    
+    <h1>Reproduzindo Audio</h1>
+    <audio src="audio/musica.mp3" controls></audio>
+    
 </body>
 </html>
