--- a/HTML5 CSS3/ex012/index.html
+++ b/HTML5 CSS3/ex012/index.html
@@ -20,11 +20,13 @@
         }
         div {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 0fr 0fr;
             gap: 10px;
             justify-content: center;
             align-items: center;
             margin: 20px;
+            margin-left: auto;
+            margin-right: auto;
         }
         img{
             width: 300px;
