--- a/HTML5 CSS3/MODULO_02/ex004/index.html
+++ b/HTML5 CSS3/MODULO_02/ex004/index.html
@@ -13,19 +13,28 @@
             align-items: center;
             width: 200px;
             height: 200px;
+            margin-top: 50px;
         }
 
+        div > p {
+            display: none;
+        }
+        
+        div:hover > p{
+            display:block;
+        }
         div:hover{
             background-color: yellow;
+            margin-top: 15px;
         }
 
     </style>
 </head>
 <body>
     
-    <div id="d1">DIV 1</div>
-    <div id="d2">DIV 2</div>
-    <div id="d3">DIV 3</div>
+    <div id="d1">DIV 1 <p>Olá Estou aqui</p></div>
+    <div id="d2">DIV 2 <p>Olá Estou aqui</p></div>
+    <div id="d3">DIV 3 <p>Olá Estou aqui</p></div>
 
 </body>
 </html>
